style.css
/* The code below centers the text of all h1's on the page. */
h1 {
    text-align: center;
}

/* The code below centers all images on the page and gives them a width of 400px. */
img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 400px;
}

/* The code below centers the text of all h2's on the page. */
h2 {
    text-align: center;
}

/* The code below aligns all the sections horizontally on the bottom. */
.section-container {
    display: flex;
    justify-content: space-between; 
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
}
title {
    font-size: 60px;
    text-align: center;
    color: black;
}

body {
    background-color: #ef6000;
}

h1 {
    font-size: 45px;
    text-align: center;
    color: black;
    background-color: #ef6000;
}

h2 {
    font-size: 30px;
    text-align: center;
    color: black;
    background-color: #ef6000;
    border: 2px solid #ef6000;
    border-radius: 10px;
    border-width: 5px;
    padding: 20px;
}

p {
    font-size: 25px;
    text-align: center;
    color: black;
    background-color: #ef6000;
    margin: 20px;
}

ul {
    font-size: 25px;
    text-align: left;
    color: black;
}

a {
    font-size: 20px;
    text-align: center;
    color: darkblue;
}

.section-1,
.section-2,
.section-3 {
    display: flex;
    flex-wrap: wrap;
    flex:1;
    flex-direction: row;
    align-items: center;
    margin-bottom: 20px;
    border: 5px solid black;
    margin: 10px;
    background-color: #ef6000;
    height: 750px;
}

